# rust-database-api

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-08-08-134538_create_books/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
