[package]
name = "rust-database-api"
version = "0.2.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.205"
rocket = { version = "0.5.1", default-features = false, features = ["json"] }